It's going great

--- a/src/app.css
+++ b/src/app.css
@@ -1,3 +1,59 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+	:root {
+		--background: 12 37% 100%;
+		--foreground: 12 66% 0%;
+		--muted: 12 32% 89%;
+		--muted-foreground: 12 10% 32%;
+		--popover: 12 37% 100%;
+		--popover-foreground: 12 66% 0%;
+		--card: 0 0% 99%;
+		--card-foreground: 0 0% 0%;
+		--border: 220 13% 91%;
+		--input: 220 13% 91%;
+		--primary: 12 95% 62%;
+		--primary-foreground: 12 95% 2%;
+		--secondary: 12 8% 91%;
+		--secondary-foreground: 12 8% 31%;
+		--accent: 12 14% 85%;
+		--accent-foreground: 12 14% 25%;
+		--destructive: 18 86% 42%;
+		--destructive-foreground: 0 0% 100%;
+		--ring: 12 95% 62%;
+		--radius: 0.5rem;
+	}
+
+	.dark {
+		--background: 12 49% 1%;
+		--foreground: 12 22% 97%;
+		--muted: 12 32% 11%;
+		--muted-foreground: 12 10% 68%;
+		--popover: 12 49% 1%;
+		--popover-foreground: 12 22% 97%;
+		--card: 12 49% 2%;
+		--card-foreground: 12 22% 98%;
+		--border: 215 27.9% 16.9%;
+		--input: 215 27.9% 16.9%;
+		--primary: 12 95% 62%;
+		--primary-foreground: 12 95% 2%;
+		--secondary: 12 5% 15%;
+		--secondary-foreground: 12 5% 75%;
+		--accent: 12 11% 24%;
+		--accent-foreground: 12 11% 84%;
+		--destructive: 18 86% 52%;
+		--destructive-foreground: 0 0% 100%;
+		--ring: 12 95% 62%;
+	}
+}
+
+@layer base {
+	* {
+		@apply border-border;
+	}
+	body {
+		@apply bg-background text-foreground;
+	}
+}
